# SignalForge

./: .env.example  .gitignore  Dockerfile  PERFORMANCE_AUDIT.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 30c6fa5b4fd7_add_account_lockout_columns.py  5352ff6c95f5_add_notifications_table.py  5a1c2f9d1b20_add_refresh_tokens_table.py  f76aa8cab6d3_add_alerts_and_triggered_alerts_tables.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  alert.py  notification.py  refresh_token.py  user.py
backend/app/repositories/: alert_repository.py  market_data_repository.py  notification_repository.py  refresh_token_repository.py  user_repository.py
backend/app/schemas/: alert.py  analytics.py  auth.py  market_data.py  notification.py  search.py  user.py  watchlist.py
backend/app/services/: alert_evaluation_service.py  alert_service.py  analytics_service.py  auth_service.py  (+8 more)
backend/tests/: conftest.py  test_alert_evaluation_integration.py  test_alert_integration.py  test_analytics_integration.py  test_auth_integration.py  test_market_data_integration.py  test_notification_integration.py  test_search_integration.py  test_watchlist_integration.py
docs/: EXPLAIN.md  architecture.md  loopholes.md
frontend/: .env.example  .gitignore  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend_streamlit/: app.py
insique.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+159 files in other folders)
